fixed 1440 productList wrap height

--- a/my-app/src/components/common-components/ProductCardList/ProductCardList.module.css
+++ b/my-app/src/components/common-components/ProductCardList/ProductCardList.module.css
@@ -21,3 +21,8 @@
         margin-bottom: 48px;
     }
 }
+@media (min-width: 1440px){
+    .product_wrap {
+        height: 497px;
+    }
+}
